fix: fix mobile and some bugs on tablet

--- a/css/main.scss
+++ b/css/main.scss
@@ -75,19 +75,21 @@ button {
   display: flex;
   margin: 0;
   padding: 0;
+  margin: 0 -8px;
   overflow-x: scroll;
 }
 
-.product-item img {
+.product-slider img {
   display: block;
 }
+
 
 .product-info {
   display: flex;
   justify-content: space-between;
   padding-top: rem(16);
-  padding-left: rem(16);
-  padding-right: rem(16);
+  padding-left: rem(8);
+  padding-right: rem(8);
   margin-bottom: rem(16);
 }
 
@@ -108,8 +110,8 @@ button {
 }
 
 .color {
-  padding-left: rem(16);
-  padding-right: rem(16);
+  padding-left: rem(8);
+  padding-right: rem(8);
 }
 
 .color-actual {
@@ -159,8 +161,8 @@ button {
 .product-btn-wrap {
   display: flex;
   flex-direction: column;
-  padding-left: rem(16);
-  padding-right: rem(16);
+  padding-left: rem(8);
+  padding-right: rem(8);
   padding-bottom: rem(48);
 }
 
@@ -213,7 +215,7 @@ button {
   & .info-block-body {
     display: none;
   }
-  &:last-child {
+  &--border-bottom {
     border-bottom: solid 1px #c6c6c6;
   }
   &-header {
@@ -378,7 +380,7 @@ button {
 }
 
 .more-item {
-  display: inline-block;
+  //display: inline-block;
   margin: 0 0 15px;
 }
 
@@ -427,14 +429,9 @@ button {
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width: 320px) {
-  //.container {
-  //  padding: 0;
-  //  //margin: 0;
-  //}
-  //.row {
-  //  padding: 0;
-  //  //margin: 0;
-  //}
+  .hidden-xs {
+    display: none;
+  }
 }
 
 /* Extra Small Devices, Phones */
@@ -444,8 +441,8 @@ button {
 
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
-  .container {
-    //padding: 0;
+  .hidden-xs {
+    display: block;
   }
   .md-hide {
     display: none;
@@ -459,13 +456,14 @@ button {
 
   }
   .product-title {
-    padding-left: rem(7);
+    padding-left: rem(8);
     margin-bottom: rem(24);
     font-size: rem(24);
-    line-height: rem(29);
+    line-height: rem(28);
     color: #111111;
   }
   .product-slider {
+    margin: 0;
     margin-left: -8px;
     img {
       vertical-align: bottom;
@@ -473,15 +471,21 @@ button {
   }
   .product-info {
     padding: 0;
-    margin-right: -8px;
+    margin-right: rem(-8);
+    margin-left: rem(1);
   }
   .color {
     padding: 0;
-    margin-right: -8px;
+    margin-right: rem(-8);
+    margin-left: rem(1);
   }
   .product-btn-wrap {
     padding: 0;
-    margin-right: -8px;
+    margin-right: rem(-8);
+    //margin-left: rem(1);
+  }
+  .product-help {
+    margin-left: rem(1);
   }
   .info-block {
     padding: 0;
@@ -563,6 +567,9 @@ button {
   }
   .footer {
     padding-top: rem(32);
+    padding-left: 0;
+    padding-right: 0;
+
     &-link {
       display: inline-block;
       margin-right: rem(24);
@@ -571,12 +578,15 @@ button {
     }
     &-mnu {
       margin-bottom: 32px;
+      margin-left: -8px;
+      margin-right: -8px;
     }
     &-mnu-title {
       margin-bottom: rem(16);
       font-size: rem(12);
       line-height: 1;
       font-weight: bold;
+      text-transform: uppercase;
       color: #171717;
     }
     &-mnu-list {
@@ -599,6 +609,9 @@ button {
         margin-bottom: 0;
       }
     }
+  }
+  .footer-links {
+    margin-left: 8px;
   }
 }
 
